<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Momo</string>

    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="nh_p_th_ng_tin">Nhập thông tin</string>
    <string name="th_ng_tin_na_y_du_ng_xa_c_th_c_va_ba_o_v_ta_i_khoa_n_cu_a_ba_n_t_t_h_n">Thông tin này dùng để xác thực và bảo vệ tài khoản của bạn tốt hơn</string>
    <string name="xa_c_nh_n">XÁC NHẬN</string>
    <string name="nh_p_email">Nhập email</string>
    <string name="nh_p_ho_amp_t_n"><![CDATA[Nhập họ & tên]]></string>
    <string name="qua_n_ly_ta_i_khoa_n">Quản lý tài khoản</string>
    <string name="chuy_n_ti_n">Chuyển tiền</string>
    <string name="chuy_n_ti_n_li_n_ng_n_h_ng">Chuyển tiền liên ngân hàng</string>
    <string name="voucher">Voucher</string>
    <string name="chat">Chat</string>
    <string name="vi_cua_toi">Ví của tôi</string>
    <string name="explore_now">Khám phá ngay</string>
    <string name="vietnamese">Việt</string>
    <string name="english">Eng</string>
    <string name="intro1">Chuyển tiền nhanh, thanh toán một chạm</string>
    <string name="intro2">Tiêu dùng và sinh lời mỗi ngày với ví trả sau, túi thần tài!</string>
    <string name="intro3">Vô vàn ưu đãi úp dụng ngay trên hóa đơn</string>
    <string name="intro4">Ưu đãi thành viên, Thanh toán không giới hạn</string>
    <string name="next">Tiếp tục</string>
    <string name="momo_hello">MoMo xin chào!</string>
    <string name="phone_number">Phone number</string>
    <string name="can_t_connect">Cant connect</string>
    <string name="you_need_an_internet_connection_to_n_use_this_app">You need an internet connection to \n use this app</string>
    <string name="connect">Connect</string>
    <string name="put_otp_to_logging_in">Put OTP to Logging in</string>
    <string name="nearly">Nearly</string>
    <string name="transfer_service">Transfer service</string>
    <string name="into_momo_wallet">Into Momo Wallet</string>
    <string name="transfer">Transfer</string>
    <string name="enter_message">Enter message</string>
    <string name="momo_hello_">Momo hello</string>
    <string name="enter_phone_number_to_login_or_register">Enter phone number to login or register</string>
    <string name="invalidate_number">Invalidate number</string>
    <string name="register_momo">Register momo with</string>
    <string name="the_otp_will_be_sent_to_this_number">The OTP will be sent to this number</string>
    <string name="change_number">Change</string>
    <string name="confirm">Confirm</string>
    <string name="login_in">Login In</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_h_send_to">OTP has send to:</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="change_number_">Change number</string>
    <string name="continue_">Continue</string>
    <string name="login_in_">Login In</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="buy_film">Buy film ticket</string>
    <string name="thanh_toan">Recepit payment</string>
    <string name="top_up_at_station">Top up at Station</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="deposit_type">Deposit type</string>
    <string name="withdraw">Withdraw</string>
    <string name="fee">Fee</string>
    <string name="my_profile">My profile</string>
    <string name="save">Save</string>
    <string name="my_profile_">My Profile</string>
    <string name="information">Information</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="create_password">Create Password</string>
    <string name="information_">Information</string>
    <string name="vertified">Vertified</string>
    <string name="personal_information">Personal information</string>
    <string name="block_list">Block List</string>
    <string name="edit">Edit</string>
    <string name="edit_">Edit</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="online">Online</string>
    <string name="contact">Contact</string>
    <string name="edit__">Edit</string>
    <string name="address">Address</string>
    <string name="log_out">Log out</string>
    <string name="personal_information_">Personal information</string>
    <string name="download">Download</string>
    <string name="save_to_media">Saved to media</string>
    <string name="register">Register</string>
    <string name="confirm_otp_">Confirm OTP</string>
    <string name="resend_otp_">Resend OTP</string>
    <string name="top_up_balance">Top up balance</string>
    <string name="top_uo">Top up</string>
    <string name="add_bank_account_">Add Bank Account</string>
    <string name="top_up_at_station_">Top up at Station</string>
    <string name="top_up">Top up</string>
    <string name="change">Change</string>
    <string name="transaction_manager">Transaction Manager</string>
    <string name="link_a_bank">Link a bank</string>
    <string name="from">From</string>
    <string name="qr_code_get_money">QR code get money</string>
    <string name="purchase_code">Purchase code</string>
    <string name="scan">Scan</string>
    <string name="account_manager">Account manager</string>
    <string name="sent_money">Sent money</string>
    <string name="buy_card">Buy card</string>
    <string name="wallet">Wallet</string>
    <string name="protection">Protection</string>
    <string name="other">Other</string>
    <string name="momo_suggest">Momo suggest</string>
    <string name="new_update">New update</string>
    <string name="your_promo">Your promo</string>
    <string name="new_promo">New promo</string>
    <string name="movie_on_threater">Movie on threater</string>
    <string name="buy_ticket">Buy ticket</string>
    <string name="are_you_sure">Are you sure want to buy this ticket?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cost">This ticket cost 79.000 vnd</string>
    <string name="buy_success">Buy success</string>
    <string name="phone">Phone</string>
    <string name="are_you_sure_exit">Are you sure want to log out?</string>
    <string name="buy_ticket_">Buy ticket</string>
    <string name="later">Later</string>
    <string name="manager_wallet">Manager wallet</string>
    <string name="tool">Tool</string>
    <string name="share_app">Share app</string>
    <string name="account_manager_">Account manager</string>
    <string name="sent_feedback">Sent Feedback</string>
    <string name="language">Language</string>
    <string name="rate">Rate app</string>
    <string name="transaction_history">Transaction history</string>
    <string name="home">Home</string>
</resources>